Add link to hello world lab

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
             <td class="inline-note">19.02</td>
             <td>
               <a href="./slides/0-organisation.html">Organisation</a> <span class="inline-note">(<a href="./slides/0-organisation.html?print-pdf">pdf</a>)</span>, <a href="./slides/1-introduction.html">Introduction</a> <span class="inline-note">(<a href="./slides/1-introduction?print-pdf">pdf</a>)</span>, et <a href="./slides/2-html-css.html">HTML</a> <span class="inline-note">(<a href="./slides/2-html-css?print-pdf">pdf</a>)</span>
-
             </td>
-            <td><span><a href="#">0 - Hello World</a></span></td>
+            <td><span><a href="https://classroom.github.com/a/-fEFHwaI">0 - Hello World</a></span></td>
           </tr>
           <tr class="tentative">
             <td>2</td>
