Update index.html for Week 2

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             </td>
             <td><span><a href="https://classroom.github.com/a/-fEFHwaI">0 - Hello World</a></span></td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>2</td>
             <td>26.02</td>
             <td>
               <details>
                 <summary>
-                <a href="./slides/2-html-css.html">HTML & CSS</a> <span class="inline-note">(<a href="./slides/2-html-css?print-pdf">pdf</a>)</span>
+                <a href="./slides/2-html-css.html">CSS</a> <span class="inline-note">(<a href="./slides/2-html-css?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul class="inline-note">
                   <li><a href="https://flukeout.github.io/">CSS Diner</a></li>
