Add lab for Week 2

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </ul>
               </details>
             </td>
-            <td><a href="#">1 - HTML & CSS</a></td>
+            <td><a href="https://classroom.github.com/a/7Ooi8odM">1 - HTML & CSS</a></td>
           </tr>
           <tr class="tentative">
             <td>3</td>
