Adjust size of some slides to avoid clipping in full screen

--- a/slides/2-html-css.html
+++ b/slides/2-html-css.html
@@ -950,7 +950,7 @@
 
                     </textarea>
                 </section>
-                <section data-markdown style="font-size: 0.75em">
+                <section data-markdown style="font-size: 0.6em">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> The nth child pseudo class
 
@@ -1005,9 +1005,6 @@
                         - `c` - Number of **class, attribute and pseudo-class** selectors in the ruleset.
                         - `d` - Number of **element and pseudo-element** selectors in the ruleset.
 
-                        Two declarations are compared by comparing their vector entries
-                        from left to right, until one value is higher than the other, or we have equality and the cascading rule applies, meaning that the last declaration wins.
-
                         ```css
                         #myElement .sectionClass span { /* (0, 1, 1, 1) */
                             color: green;
@@ -1025,9 +1022,14 @@
 
                         https://developer.mozilla.org/en-US/docs/Web/CSS/Specificity
 
+                        Notes:
+
+                        Two declarations are compared by comparing their vector entries
+                        from left to right, until one value is higher than the other, or we have equality and the cascading rule applies, meaning that the last declaration wins.
+
                     </textarea>
                 </section>
-                <section data-markdown style="font-size: 0.6em">
+                <section data-markdown style="font-size: 0.55em">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> Specificity Examples
 
@@ -1151,7 +1153,7 @@
 
                     </textarea>
                 </section>
-                <section data-markdown style="font-size: 0.75em;">
+                <section data-markdown style="font-size: 0.65em;">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> Background Properties
 
@@ -1367,7 +1369,7 @@
                 </section>
 
 
-                <section data-markdown style="font-size: 0.75em;">
+                <section data-markdown style="font-size: 0.65em;">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> Width and Height
 
@@ -1713,7 +1715,7 @@
                         See the illustrations on **[CSStricks](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)** to learn about the potential of flexbox.
                     </textarea>
                 </section>
-                <section data-markdown style="font-size: 0.7em;">
+                <section data-markdown style="font-size: 0.65em;">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> Flexbox
 
@@ -1723,7 +1725,7 @@
 
                         Note that given that flexbox is a one-dimensional layout model, we can control only one axis at at time (in contrast to two dimensional layout models like the grid layout).
 
-                        <img src="images/flexbox.png" style="width:70%">
+                        <img src="images/flexbox.png" style="width:65%">
 
                         Notes:
 
@@ -1752,7 +1754,7 @@
 
                     </textarea>
                 </section>
-                <section data-markdown style="font-size: 0.7em;">
+                <section data-markdown style="font-size: 0.6em;">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> Grid Layout
 
@@ -1765,7 +1767,7 @@
                         - **Container (parent) properties** : grid-template-columns, grid-template-rows, grid-template-areas, grid-template, ...
                         - **Item (child) properties** : grid-column-start, grid-column-end, grid-column, grid-row, grid-area, ...
 
-                        <img src="images/grid-layout.svg" style="width:60%"/>
+                        <img src="images/grid-layout.svg" style="width:55%"/>
 
                         See the illustrations on
                         [CSS-tricks](https://css-tricks.com/snippets/css/complete-guide-grid/)
@@ -1810,7 +1812,7 @@
                         </div>
                     </textarea>
                 </section>
-                <section data-markdown style="font-size: 0.6em;">
+                <section data-markdown style="font-size: 0.55em;">
                     <textarea data-template>
                         ## <i class="fas fa-paint-brush"></i> Grid - Areas
 
