Add comments for null and undefined

--- a/slides/3-foundations-of-javascript.html
+++ b/slides/3-foundations-of-javascript.html
@@ -354,7 +354,7 @@
                             Performs at runtime what static languages perform at compilation time (e.g. dynamic typing).
 
                             ### Prototype-based and object-oriented
-                            Behavior reuse (and inheritence) is achieved by cloning and extending objects.
+                            Behavior reuse (and inheritance) is achieved by cloning and extending objects.
 
                             ### Imperative
                             Imperative programming is a programming paradigm that uses statements that change a program's state.
@@ -563,6 +563,9 @@
                             https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Data_types
 
                             Notes:
+                            The **`undefined`** global property represents the primitive value [`undefined`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#undefined_type) and indicates the absence of a _value_ (e.g. variable without initialization, non existant object property, ...)
+
+                            The **`null`** value represents the intentional absence of any _object_ value.
 
                             The `Symbol` data type is special.
 
@@ -578,7 +581,7 @@
                             slide) could have a property whose index is
                             `Symbol("model")`, rather than simply
                             `"model"`. This would ensure that this property does
-                            not get overridden by mistake by an inheritting
+                            not get overridden by mistake by an inheriting
                             class (see next chapter on OOP), for example.
 
                         </textarea>
