--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </details>
             </td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>4</td>
             <td>12.03</td>
             <td>
@@ -102,7 +102,7 @@
                 </ul>
               </details>
             </td>
-            <td><a href="#">2 - Tetris I</a></td>
+            <td><a href="labos/labo-2-tetris-1.html">2 - Tetris I</a></td>
           </tr>
           <tr class="tentative">
             <td>5</td>
