Improve wording and remove ambiguity

--- a/slides/4-object-oriented-javascript.html
+++ b/slides/4-object-oriented-javascript.html
@@ -1748,7 +1748,7 @@
             <textarea data-template>
               ## `requestAnimationFrame` example
 
-              Calls the passed function before the next repaint with the current timestamp, in practice this matches the refresh rate of the display.
+              Calls the passed function before the next repaint, (optionally) with the current timestamp.
 
               This allows having smooth animations and is a much better alternative than `setTimeout` or `setInterval`;
 
