Updates to 5-testing, 6-iterators and client server applications

--- a/slides/5-testing-javascript-applications.html
+++ b/slides/5-testing-javascript-applications.html
@@ -207,7 +207,9 @@
 
                             <div class="spoiler">
 
-                            32. En effet, la fonction `getOlder` n'est pas appelée comme une méthode (c'est à dire avec la notation `.`).
+                            32
+
+                            En effet, la fonction `getOlder` n'est pas appelée comme une méthode (c'est à dire avec la notation `.`).
 
                             Similairement aux constructeurs, qui sont de simples fonctions s'ils ne sont pas appelés avec `new`, une méthode n'est qu'une fonction si elle n'est pas appelée avec sur un objet.
 
