--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <td>
               <details>
                 <summary>
-                  <span class="italic">Mock Test</span> et <a href="./slides/6-client-server-applications.html">Itérateurs</a> <span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span>
+                  <span class="italic">Mock Test</span>
                 </summary>
                 <ul class="inline-note">
                   <li><a href="https://www.reddit.com/r/learnjavascript/comments/nnlubt/really_helpful_illustration_of_js_array_methods/">Really helpful illustration of JS array methods</a></li>
@@ -128,11 +128,11 @@
               </details>
             </td>
           </tr>
-          <tr class="tentative">
+          <tr>
             <td>6</td>
             <td>26.03</td>
             <td><span class="italic yellow">Test Écrit 1</span> et <a href="./slides/5-testing-javascript-applications.html">Testing</a> <span class="inline-note">(<a href="./slides/5-testing-javascript-applications.html?print-pdf">pdf</a>)</span></td>
-            <td><a href="#">3 - Tetris II</a></td>
+            <td><a href="labos/labo-3-tetris-2.html">3 - Tetris II</a></td>
           </tr>
           <tr class="tentative">
             <td>7</td>
@@ -140,7 +140,7 @@
             <td>
               <details>
                 <summary>
-                  <a href="./slides/6-client-server-applications.html">Client Server Applications</a><span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span> et <a href="./slides/7-network-programming.html">Network Programming</a> <span class="inline-note">(<a href="./slides/7-network-programming.html?print-pdf">pdf</a>)</span>
+                  et <a href="./slides/6-client-server-applications.html">Itérateurs</a> <span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span> <a href="./slides/6-client-server-applications.html">Client Server Applications</a><span class="inline-note">(<a href="./slides/6-client-server-applications.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul class="inline-note">
                   <li><a href="https://github.com/web-classroom/example-chat">example-chat</a></li>
@@ -166,7 +166,7 @@
             <td>
               <details>
                 <summary>
-                  <a href="./slides/8-async.html">Async, REST, HTTPS</a> <span class="inline-note">(<a href="./slides/8-async.html?print-pdf">pdf</a>)</span>
+                  <a href="./slides/7-network-programming.html">Network Programming</a> <span class="inline-note">(<a href="./slides/7-network-programming.html?print-pdf">pdf</a>)</span> et <a href="./slides/8-async.html">Async, REST, HTTPS</a> <span class="inline-note">(<a href="./slides/8-async.html?print-pdf">pdf</a>)</span>
                 </summary>
                 <ul>
                   <li><a href="https://www.codingame.com/playgrounds/347/javascript-promises-mastering-the-asynchronous/its-time-to-pratice-with-promises">Practical : JavaScript promises, mastering the asynchronous</a></li>
